welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: not found: value getCoulourSol
if (getCoulourSol()==Color.green){
    ^